# smartloop-tui

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  install  install.sh  main.py  pyproject.toml  requirements.txt  setup.sh  slp  slp.sh  smartloop.spec  uninstall.sh  version.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-tag.yml  build.yml  bump-version.yml  release.yml
commands/: __init__.py  base.py  cli.py  console.py  document.py  helpers.py  init.py  mcp.py  model.py  projects.py  run.py  server.py  skill.py  token.py
hooks/: rthook_chroma_telemetry.py  rthook_frozen_probe.py  rthook_utf8.py
packaging/macos/: entitlements.mac.plist
tui/: chat.py  constants.py  events.py  markdown.py  oauth.py  theme.py
tui/commands/: __init__.py  attachment.py  auth.py  document.py  mcp.py  model_info.py  project.py  skill.py
tui/css/: chat.tcss
tui/widgets/: __init__.py  chat_log.py  command_menu.py  prompt_text_area.py  selectable_static.py
tui/workers/: __init__.py  bootstrap.py  connection.py  streaming.py
